# bdumecro

./: .gitignore  README.md  RELEASE_NOTES.md  build.bat  build.spec  pyproject.toml  release.bat  requirements.txt
.claude/: PLAN_BDU.md  bdu.html  bdu.modal.html  bdu.video.detail.html  bdu.video.html  bduLearnList.html  budLesion.html  settings.local.json
.omc/sessions/: 51d7391e-601b-4b4d-b883-15d87d06d6bf.json  89ccacc2-d875-4d00-8db7-3ef2952dee75.json  8d8d0652-5a2c-4819-a1d7-483e2bc9a4e8.json  9d98943b-70f4-4f2d-9508-7f9207a7e9ec.json  c861174b-11f8-4489-aac6-dbb080b98a76.json  cd4e122c-99dd-41ea-a9d7-0fba02f01c79.json  d2bc5ffd-1465-4e77-8e35-6bfaab220509.json  d69a4536-7d23-4d08-888b-80c00c3c1602.json  e5526f71-357d-4c3d-884e-b15d5e32efb7.json  f21ffa08-4df0-4b52-9fb2-f81607809a14.json  fd969525-9a99-4650-8d2c-2af4d7c5125e.json
.omc/state/: subagent-tracking.json
.omc/state/checkpoints/: checkpoint-2026-03-09T07-21-15-906Z.json  checkpoint-2026-03-09T07-24-14-827Z.json
src/: __init__.py  app.py  main.py
src/browser/: __init__.py  driver.py  login.py
src/gui/: __init__.py  components.py  dashboard.py
src/parser/: __init__.py  lms_parser.py
src/utils/: config.py
