[project]
name = "bdu-lms-tracker"
version = "1.2.0"
description = "부산디지털대학교 LMS 수강현황 트래커"
requires-python = ">=3.11"
dependencies = [
    "selenium>=4.15.0",
    "beautifulsoup4>=4.12.0",
    "customtkinter>=5.2.0",
    "webdriver-manager>=4.0.0",
    "lxml>=4.9.0",
]

[project.optional-dependencies]
dev = [
    "pyinstaller>=6.0.0",
]

[project.scripts]
bdu-tracker = "src.main:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
